[package]
name = "rustyweb_rocket"
version = "0.1.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
rustc-serialize = "0.3"
serde_derive = "1"
serde = "1"
lazy_static = "0.2"
base64 = "0.7"
ring = "0.11"
untrusted = "0.5"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
rustyweb = {path = "../rustyweb"}

[dev-dependencies]
reqwest = "0.7"